--- a/story/storymap.html
+++ b/story/storymap.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    
+  //below is the code for the simple map, CSS, HTML and JavaScript 
+    // Sourced from: https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-css
     <style>
      /* 
  * Always set the map height explicitly to define the size of the div element
@@ -36,9 +39,8 @@ body {
     margin-left: 40px;
     margin-right: 40px;
   }
-
-
     </style>
+    
     <title>Simple Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
@@ -61,6 +63,7 @@ body {
     <script>
     let map;
 
+      // Below is the code for the polyline between markers. Sourced from: https://developers.google.com/maps/documentation/javascript/examples/polyline-simple
     function initMap() {
       const map = new google.maps.Map(document.getElementById("map"), {
         center: { lat: 47.478, lng: -52.891 },
@@ -83,6 +86,7 @@ body {
 
 // below is the markers locations, the click for popup and the java for the popup.
 // Sourced from: https://developers.google.com/maps/documentation/javascript/examples/infowindow-simple 
+      // and https://developers.google.com/maps/documentation/javascript/examples/marker-simple
    {const contentString =
     '<div id="content">' +
     '<div id="siteNotice">' +
