--- a/story/storymap.html
+++ b/story/storymap.html
@@ -38,6 +38,7 @@ body {
   #information {
     margin-left: 40px;
     margin-right: 40px;
+    font-family: Arial, Helvetica, sans-serif;
   }
     </style>
     
