--- a/story/storymap.html
+++ b/story/storymap.html
@@ -51,7 +51,7 @@ body {
   <body>
   
 <h1 id="title">Newfoundland & Labrador</h1>
-<p id="information">Along the Irish Loop, in the heart of Newfoundland & Labrador there are 5 mainpoints you absouelty have to visit.  that bring you to some of the most historic and breathaking views. </p>
+<p id="information">Along the Irish Loop, in the heart of Newfoundland & Labrador there are 5 main points you absouelty have to visit. These 5 stops will bring you to some of the most historic and breathaking views. </p>
  
 
 <div id="map"></div>
