--- a/story/storymap.html
+++ b/story/storymap.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     
-  //below is the code for the simple map, CSS, HTML and JavaScript 
-    // Sourced from: https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-css
+  */below is the code for the simple map, CSS, HTML and JavaScript: Sourced from: https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-css
     <style>
      /* 
  * Always set the map height explicitly to define the size of the div element
