--- a/story/storymap.html
+++ b/story/storymap.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     
-  */below is the code for the simple map, CSS, HTML and JavaScript: Sourced from: https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-css
+  
     <style>
      /* 
  * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
+ * that contains the map. below is the code for the simple map, CSS, HTML and JavaScript: Sourced from: https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-css
  */
 #map {
   height: 100%;
